--- a/src/index.html
+++ b/src/index.html
@@ -17,20 +17,22 @@
 
         <ul class="navigation">
           <li class="navigation__item">
-            <a class="navigation__link  navigation__link--active "href="#">Расписание</a>
+            <a class="navigation__link  navigation__link--active" href="#">Расписание</a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__link "href="#">Инструкторы</a>
+            <a class="navigation__link" href="#">Инструкторы</a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__link "href="#">Стоимость</a>
+            <a class="navigation__link" href="#">Стоимость</a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__link "href="#">Как добраться</a>
+            <a class="navigation__link" href="#">Как добраться</a>
           </li>
         </ul>
 
         <a class="phone" href="tel:88008008080">8 (800) 800-80-80</a>
+
+        <a class="button" href="#">Записаться</a>
 
       </div>
     </header>
@@ -125,8 +127,116 @@
 
         </section>
 
+        <ul class="pagination">
+          <li class="pagination__item">
+            <a class="pagination__link  pagination__link--active" href="#">Left</a>
+          </li>
+          <li class="pagination__item">
+            <a class="pagination__link  pagination__link--active" href="#">1</a>
+          </li>
+          <li class="pagination__item">
+            <a class="pagination__link" href="#">2</a>
+          </li>
+          <li class="pagination__item">
+            <a class="pagination__link" href="#">3</a>
+          </li>
+          <li class="pagination__item">
+            <a class="pagination__link" href="#">4</a>
+          </li>
+          <li class="pagination__item">
+            <a class="pagination__link" href="#">5</a>
+          </li>
+          <li class="pagination__item">
+            <a class="pagination__link" href="#">Right</a>
+          </li>
+        </ul>
+
+        <form class="form" action="#" method="post">
+          <fieldset class="form__list">
+            <legend class="form__title">Заказать обратный звонок</legend>
+
+            <div class="form__item">
+              <label for="name" class="form__label">Имя</label>
+              <input id="name" class="form__input" type="text" name="name">
+            </div>
+
+            <div class="form__item">
+              <label for="surname" class="form__label">Фамилия</label>
+              <input id="surname" class="form__input" type="text" name="surname">
+            </div>
+
+            <div class="form__item">
+              <label for="phone" class="form__label">Телефон</label>
+              <input id="phone" class="form__input" type="tel" name="phone" pattern="[0-9]{3} [0-9]{3} [0-9]{2} [0-9]{2}">
+            </div>
+
+            <div class="form__item">
+              <label for="textarea" class="form__label">Ваше сообщение</label>
+              <textarea id="textarea" class="form__area" rows="10" cols="30" name="textarea"></textarea>
+            </div>
+
+            <button class="button" type="submit">Отправить</button>
+
+          </fieldset>
+        </form>
+
       </div>
     </main>
+
+    <footer class="page-footer">
+      <div class="container">
+
+        <div class="page-footer__row">
+
+          <a class="logo  logo--footer" href="#">Ice Ace</a>
+
+          <ul class="social">
+            <li class="social__item">
+              <a class="social__link" href="#">YouTube</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" href="#">Instagram</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" href="#">Facebook</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" href="#">VK</a>
+            </li>
+          </ul>
+
+          <div class="page-footer__contact">
+            <a class="phone" href="tel:88008008080">8 (800) 800-80-80</a>
+            <a class="page-footer__mail" href="mailto:hello@iceace.com">hello@iceace.com</a>
+          </div>
+
+        </div>
+
+        <div class="page-footer__row">
+
+          <p class="page-footer__copyright">
+            &#9400; 2017 “<span>Ice Ace</span>” — школа сноуборда и горных лыж. Все права защищены
+          </p>
+
+          <ul class="navigation">
+            <li class="navigation__item">
+              <a class="navigation__link" href="#">Расписание</a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link" href="#">Инструкторы</a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link" href="#">Стоимость</a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link" href="#">Как добраться</a>
+            </li>
+          </ul>
+
+        </div>
+
+      </div>
+    </footer>
 
   </body>
 </html>
