--- a/src/index.html
+++ b/src/index.html
@@ -192,21 +192,21 @@
 
           <ul class="social">
             <li class="social__item">
-              <a class="social__link" href="#">YouTube</a>
+              <a class="social__link  social__link--youtube" href="#">YouTube</a>
             </li>
             <li class="social__item">
-              <a class="social__link" href="#">Instagram</a>
+              <a class="social__link  social__link--indtagram" href="#">Instagram</a>
             </li>
             <li class="social__item">
-              <a class="social__link" href="#">Facebook</a>
+              <a class="social__link  social__link--facebook" href="#">Facebook</a>
             </li>
             <li class="social__item">
-              <a class="social__link" href="#">VK</a>
+              <a class="social__link  social__link--vk" href="#">VK</a>
             </li>
           </ul>
 
           <div class="page-footer__contact">
-            <a class="phone" href="tel:88008008080">8 (800) 800-80-80</a>
+            <a class="phone  phone--footer" href="tel:88008008080">8 (800) 800-80-80</a>
             <a class="page-footer__mail" href="mailto:hello@iceace.com">hello@iceace.com</a>
           </div>
 
@@ -219,17 +219,17 @@
           </p>
 
           <ul class="navigation">
-            <li class="navigation__item">
-              <a class="navigation__link" href="#">Расписание</a>
+            <li class="navigation__item  navigation__item--footer">
+              <a class="navigation__link  navigation__link--footer" href="#">Расписание</a>
             </li>
-            <li class="navigation__item">
-              <a class="navigation__link" href="#">Инструкторы</a>
+            <li class="navigation__item  navigation__item--footer">
+              <a class="navigation__link  navigation__link--footer" href="#">Инструкторы</a>
             </li>
-            <li class="navigation__item">
-              <a class="navigation__link" href="#">Стоимость</a>
+            <li class="navigation__item  navigation__item--footer">
+              <a class="navigation__link  navigation__link--footer" href="#">Стоимость</a>
             </li>
-            <li class="navigation__item">
-              <a class="navigation__link" href="#">Как добраться</a>
+            <li class="navigation__item  navigation__item--footer">
+              <a class="navigation__link  navigation__link--footer" href="#">Как добраться</a>
             </li>
           </ul>
 
